--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
               >لطفا بودجه اولیه خود را وارد کنید.</span
             >
             <input type="number" class="borderGray budgetInput" />
+            <span class="emptyErrorText addBudgetError"></span>
           </div>
           <button class="calcBudgetBtn alignSelfEnd">محاسبه</button>
         </div>
@@ -31,6 +32,7 @@
             >
             <input type="number" class="borderGray costAmountInput" />
           </div>
+          <span class="emptyErrorText addCostError"></span>
           <button class="addCostBtn alignSelfEnd">اضافه کردن هزینه</button>
         </div>
       </aside>
