--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
           <div class="inputAndTitleBox">
             <span class="alignSelfStart"
-              >لطفا مقدار عنوان هزینه را وارد کنید.</span
+              >لطفا مقدار هزینه را وارد کنید.</span
             >
             <input type="number" class="borderGray costAmountInput" />
           </div>
@@ -37,8 +37,8 @@
         </div>
       </aside>
       <section>
-        <button class="refreshBtn">
-          <img class="refresh" src="./assets/images/refresh.png" />
+        <button onclick="handleRefresh()" class="refreshBtn">
+          <img  class="refresh" src="./assets/images/refresh.png" />
         </button>
 
         <div class="mainBoxesWrapper">
@@ -46,21 +46,21 @@
             <span class="titleText">بودجه</span>
             <img src="./assets/images/budget.png" />
             <span class="fs40 textGreen"
-              >$<span class="budget fs40 textGreen">0</span></span
+              >$<span class="budget fs40 textGreen"></span></span
             >
           </div>
           <div class="titlesBox">
             <span class="titleText">هزینه ها</span>
             <img src="./assets/images/card.png" />
             <span class="fs40 textRed"
-              >$<span class="costs fs40 textRed">0</span></span
+              >$<span class="costs fs40 textRed"></span></span
             >
           </div>
           <div class="titlesBox">
             <span class="titleText">موجودی</span>
             <img src="./assets/images/dollar.png" />
             <span class="fs40 textGreen"
-              >$<span class="balance fs40 textGreen">0</span></span
+              >$<span class="balance fs40 textGreen"></span></span
             >
           </div>
         </div>
