--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="titlesBox">
             <span class="titleText">موجودی</span>
             <img src="./assets/images/dollar.png" />
-            <span class="fs40 textGreen"
+            <span class="fs40 textGreen balanceDollarSign"
               >$<span class="balance fs40 textGreen"></span
             ></span>
           </div>
