--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="tableWrapper">
-          <table>
+          <table class="hidden">
             <thead>
               <tr>
                 <th>عملیات</th>
